--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <button type="button" id="subscribe">Следить за изменениями</button>
+<script type="text/javascript" src="bootstrap.js"></script>
 <script type="text/javascript" src="//www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
 <script type="text/javascript" src="firebase_subscribe.js"></script>
